--- a/busysignal.html
+++ b/busysignal.html
@@ -15,7 +15,7 @@
 </head>
 	<body>
   
-	  <center><img src="https://webstax.github.io/swologo.png" width="500" height="500"></center>
+	  <center><img src="https://ibb.co/0K4pk4T" width="500" height="500"></center>
   	  <center><h1>Watch This Space</h1><?center>
   </body>
  </html>
