--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <div class="header-text">
+				<p>Hey, Im Lachy Schumacher</p>
                                     <h2><span class="typing"></span></h2>
                                     
                                     <div class="margin-top-60">
