--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
          <div class="row">
                
               <div class="col-md-6 col-sm-12 col-xs-12">
-                <img class="img-responsive" src="/bg/me.jpg" draggable="false" alt="">
+                <img class="img-responsive" src="bg/me.jpg" draggable="false" alt="">
               </div>
                 
               <div class="col-md-6 col-sm-12 col-xs-12">
