--- a/index.html
+++ b/index.html
@@ -125,8 +125,16 @@
                   <h2>About Me.</h2>
                   
                 <p>
-                I’m Lachy Schumacher, A Sydney Based Graphic Designer, Web Developer & Designer.  I Specialize in Developing & Designing Websites For Individuals, Freelancers & Small To Medium Size Businesses. Furthermore, I Have Extensive Skills In Graphic Design, These Skills Include Creating Logo’s, Mockups, Advertising Material & Product Designs.
+                I’m Lachy Schumacher, Im A UX/UI Designer, Graphic Designer & Digital Content Creator Based In Sydney Australia. For The Past 5 Years Have Worked With Small To Medium Sized Business To Help Them Develop their Branding, Both Digitally & In Brick And Mortar Locations. Apart From My Skills Listed Above My Skillset Also Includes:
                 </p>
+		<ul>
+		<li>Web Design</li>
+		<li>Product Packaging</li>
+  		<li>Targeted Advertising</li>
+  		<li>Social Media Marketing</li>
+		<li>Social Media Management</li>
+		
+		</ul> 
                  </div>
              
               </div>
