--- a/index.html
+++ b/index.html
@@ -125,16 +125,9 @@
                   <h2>About Me.</h2>
                   
                 <p>
-                I’m Lachy Schumacher, Im A UX/UI Designer, Graphic Designer & Digital Content Creator Based In Sydney Australia. For The Past 5 Years Have Worked With Small To Medium Sized Business To Help Them Develop their Branding, Both Digitally & In Brick And Mortar Locations. Apart From My Skills Listed Above My Skillset Also Includes:
-                </p>
-		<ul>
-		<li>Web Design</li>
-		<li>Product Packaging</li>
-  		<li>Targeted Advertising</li>
-  		<li>Social Media Marketing</li>
-		<li>Social Media Management</li>
-		
-		</ul> 
+                I’m Lachy Schumacher, I'm A UX/UI Designer, Graphic Designer & Digital Content Creator Based In Sydney Australia. For The Past 5 Years Have Worked With Individuals, Freelancers, Small To Medium Sized Business To Help Them Develop their Branding, Both Digitally & In Brick And Mortar Locations. Apart From My Skills Listed Above My Skillset Also Includes Web Design, Product Packaging, Brand Development, Targeted Advertising, Social Media Marketing & Social Media Management. To View My Previous Work, Please Feel Free To Take A Look At My Portfolio.
+		</p>
+		 <a class="button button-style button-style-dark button-style-icon fa fa-long-arrow-right smoth-scroll" href="Portfolio.tydewest.com">Portfolio</a>
                  </div>
              
               </div>
