--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   
                 <p>
                 I’m Lachy Schumacher, I'm A UX/UI Designer, Graphic Designer & Digital Content Creator Based In Sydney Australia. For The Past 5 Years Have Worked With Individuals, Freelancers, Small To Medium Sized Business To Help Them Develop their Branding, Both Digitally & In Brick And Mortar Locations. Some Of The Clients I Have Worked With Include:</br><a href="https://zeusespresso.co">Zeus Espresso Co</a>, <a href="https://Soulorganic.com.au">Soul Organic Meals</a> & <a href="https://webstax.io">Webstax.io</a>. Apart From My Skills Listed Above My Skillset Also Includes Web Design, Product Packaging, Brand Development, Targeted Advertising, Social Media Marketing & Social Media Management. To View My Work, Please Feel Free To Take A Look At My Portfolio.</p>
-		 <center><a class="button button-style button-style-dark button-style-icon fa fa-long-arrow-right smoth-scroll" href="Portfolio.tydewest.com">Portfolio</a></center>
+		 <center><a class="button button-style button-style-dark button-style-icon fa fa-long-arrow-right smoth-scroll" href="https://Portfolio.tydewest.com">Portfolio</a></center>
                  </div>
              
               </div>
