--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
                
             <div class="col-md-4 text-center">
-               <p>© Copyright 2015 - 2020 Zeus Espresso Co.</p>
+               <p>© Copyright 2015 - 2020 Lachy Schumacher.</p>
                </div>
               
              <div class="col-md-4 uipasta-credit text-right">
