--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="144x144" type="image/x-icon" href="images/favicon/apple-touch-icon.png">
+	  
+       <!-- iMessage Rich Links -->\
+    <meta content="og:title" content="Lachy Schumacher" />
+    <meta content="og:image" href="images/bg/me.jpg" />
     
     <!-- All CSS Plugins -->
     <link rel="stylesheet" type="text/css" href="css/plugin.css">
