--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	  
     <!-- iMessage Rich Links -->\
     <meta property="og:title" content="iPhone" />
-    <meta property="og:image" content="https://www.apple.com/v/iphone/home/t/images/home/og.png?201610171354" />
+    <meta property="og:image" content="images/bg/me.jpg" />
     
     <!-- SEO -->
     <meta name="description" content="Krunkt.com">
