--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	  
     <!-- iMessage Rich Links -->\
-    <meta property="og:title" content="iPhone" />
+    <meta property="og:title" content="Lachy Schumacher" />
     <meta property="og:image" content="images/bg/me.jpg" />
     
     <!-- SEO -->
