--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	  
-    <!-- iMessage Rich Links -->\
+    <!-- iMessage Rich Links --> :( I'm Lost As Fuckkkkkkk
     <meta property="og:title" content="Lachy Schumacher" />
     <meta property="og:image" content="images/bg/me.jpg" />
     
