--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         
     </header>
     <!-- Home & Menu Section End-->
+	  
           <!-- About Start -->
     <section id="about" class="about-section">
          <div class="row">
@@ -145,7 +146,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-			<center><h2>My Portfolio.</h2></center>
+			<div class="section-title">
+			<h2>My Portfolio.</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                     </div>
                 </div>
