--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
             <div class="row">
                 <div class="col-sm-12">
 			<div class="section-title">
-			<h2>My Portfolio.</h2>
+			<h2></h2>
+				<center<h2>Portfolio</h2></center>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                     </div>
                 </div>
