--- a/index.html
+++ b/index.html
@@ -95,11 +95,7 @@
                                     <ul class="nav navbar-nav navbar-right">
                                         <li class="active"><a class="smoth-scroll" href="#home">Home <div class="ripple-wrapper"></div></a>
                                         </li>
-                                        <li><a class="smoth-scroll" href="#about">About</a>
-                                        </li>
-                                        <li><a class="smoth-scroll" href="#portfolio">Portfolio</a>
-                                        </li>
-                                        <li><a class="smoth-scroll" href="#testimonials">Testimonial</a>
+					    <li><a class="smoth-scroll" href="#about">About</a>
                                         </li>
                                         <li><a class="smoth-scroll" href="#contact">Contact</a>
                                         </li>
@@ -123,7 +119,7 @@
                                     <h1><span class="typing"></span></h1>
 
                                     <div class="margin-top-60">
-                          <a class="button button-style button-style-icon fa fa-long-arrow-right smoth-scroll" href="#portfolio">View Portfolio</a>
+                          <a class="button button-style button-style-icon fa fa-long-arrow-right smoth-scroll" href="https://portfolio.tydwest.com">View Portfolio</a>
                                   </div>
 
                                 </div>
@@ -145,7 +141,7 @@
          <div class="row">
 
               <div class="col-md-6 col-sm-12 col-xs-12">
-                <img class="img-responsive" src="images/bg/me.jpeg" draggable="false" alt="">
+                <img class="img-responsive" src="images/bg/me.jpg" draggable="false" alt="">
               </div>
 
               <div class="col-md-6 col-sm-12 col-xs-12">
