--- a/index.html
+++ b/index.html
@@ -162,101 +162,20 @@
 
 
     <!-- Contact Start -->
-    <section id="contact" class="contact-us section-space-padding">
-       <div class="container">
-          <div class="row">
-                <div class="col-sm-12">
-                    <div class="section-title">
-                        <h2>Contact Me.</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                    </div>
-                </div>
+<!-- Contact Start -->
+    <section id="contact">
+             
+    <center><h3>Get In Touch.</h3></center>
+      
+ <div class="text-center margin-top-50">
+          <a class="button button-style button-style-dark button-style-icon fa fa-phone smoth-scroll" href="tel://+61411477895">CALL</a>
+          <a class="button button-style button-style-dark button-style-icon fa fa-comment smoth-scroll" href="sms://+61411477895">SMS</a>
+          <a class="button button-style button-style-dark button-style-icon fa fa-envelope smoth-scroll" href="mailto:lachy@tydewest.com">EMAIL</a>
             </div>
 
+      <br>
+      </section>
 
-           <div class="text-center margin-top-10 margin-bottom-50">
-
-         <div class="row">
-
-           <div class="col-md-6">
-
-               <div class="row">
-                  <form>
-
-					  <div class="col-sm-6">
-						<div class="form-group">
-						  <input type="text" id="name" class="form-control" placeholder="Your Name">
-						 </div>
-                        </div>
-
-                       <div class="col-sm-6">
-					    <div class="form-group">
-						 <input type="email" id="email" class="form-control" placeholder="Your Email">
-						 </div>
-                        </div>
-
-                        <div class="col-sm-6">
-						  <div class="form-group">
-							<input type="text" id="website" class="form-control" placeholder="Your Website">
-						   </div>
-                          </div>
-
-                        <div class="col-sm-6">
-						  <div class="form-group">
-							<input type="text" id="address" class="form-control" placeholder="Where are You From?">
-						   </div>
-                          </div>
-
-                         <div class="col-sm-12">
-						  <select id="subject" class="form-group form-control">
-							<option value="" selected disabled>Subject</option>
-							<option>Website Design & Development</option>
-							<option>Wordpress Development</option>
-							<option>Search Engine Optimization</option>
-                            <option>Mobile Website</option>
-							<option>I Want to General Talk</option>
-                            <option>Other</option>
-						   </select>
-                          </div>
-
-                       <div class="col-sm-12">
-					    <div class="textarea-message form-group">
-					      <textarea id="message" class="textarea-message form-control" placeholder="Your Message" rows="5"></textarea>
-						  </div>
-                         </div>
-
-
-                    <div class="text-center">
-		   <button type="submit" class="button button-style button-style-dark button-style-icon fa fa-long-arrow-right text-center">Submit</button>
-	                  </div>
-
-                  </form>
-
-				</div>
-               </div>
-
-
-            <div class="col-md-6">
-              <div id="my-address" class="map space-set">
-              <p>Map will not be display without Internet Connection.</p>
-            </div>
-           </div>
-
-
-        </div>
-       </div>
-
-      <div class="margin-top-80">
-       <ul class="social-icon">
-         <li><a href="#" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#" target="_blank" class="google-plus"><i class="fa fa-google-plus"></i></a></li>
-         <li><a href="#" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a></li>
-         <li><a href="#" target="_blank" class="dribbble"><i class="fa fa-dribbble"></i></a></li>
-       </ul>
-      </div>
-
-     </section>
      <!-- Contact End -->
 
 
