--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                     <h1><span class="typing"></span></h1>
 
                                     <div class="margin-top-60">
-                          <a class="button button-style button-style-icon fa fa-long-arrow-right smoth-scroll" href="https://portfolio.tydwest.com">View Portfolio</a>
+                          <a class="button button-style button-style-icon smoth-scroll" href="https://portfolio.tydwest.com">View Portfolio</a>
                                   </div>
 
                                 </div>
@@ -153,7 +153,8 @@
                  </div>
 
               </div>
-
+		<a class="button button-style button-style-icon smoth-scroll" href="https://portfolio.tydwest.com">View Portfolio</a>
+                                  </div>
           </div>
        </section>
        <!-- About End -->
