--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
 
 
 
-	
-
+<!-- Preloader Start -->
+    <div id="preloader">
+	  <div class="loader"></div>
+    </div>
+    <!-- Preloader End -->
 
 
     <!-- Home & Menu Section Start -->
