--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
 
   <body>
 
-
+<!-- Preloader Start -->
+    <div id="preloader">
+	  <div class="loader"></div>
+    </div>
+    <!-- Preloader End -->
 
 
 
