--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <div class="header-text">
-                                    <p>Hey, I'm Lachy Schumacher</p>
+                                    <p>Hey, I'm Lachy Schumacher. I'm a:</p>
                                     <h1><span class="typing"></span></h1>
 
                                     <div class="margin-top-60">
