--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
   gtag('js', new Date());
   gtag('config', 'UA-130227821-1');
 </script>
-<!-- Hotjar Tracking Code for www.tydewest.com -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:1504996,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
 
     <!-- Meta Tag -->
     <meta charset="UTF-8">
@@ -33,10 +22,10 @@
     <meta property="og:image" content="images/bg/me.jpg" />
 
     <!-- SEO -->
-    <meta name="description" content="Krunkt.com">
-    <meta name="author" content="uipasta">
-    <meta name="url" content="http://www.krunkt.com">
-    <meta name="copyright" content="krunkt.com">
+    <meta name="description" content="I’m Lachy Schumacher, I'm A UI Designer, Graphic Designer & Developer Based In Sydney Australia.">
+    <meta name="author" content="Lachy Schumacher">
+    <meta name="url" content="tydewest.com">
+    <meta name="copyright" content="Lachy Schumacher">
     <meta name="robots" content="index,follow">
     <meta name="busysignalID" content="2260077">
 
