--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   gtag('js', new Date());
   gtag('config', 'UA-130227821-1');
 </script>
+	  
+<script>
+
+  window.intercomSettings = {
+    app_id: "z641j0ds"
+  };
+</script>
+
+<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/z641j0ds';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
 
     <!-- Meta Tag -->
     <meta charset="UTF-8">
