--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
           <a class="button button-style button-style-dark button-style-icon fa fa-facebook smoth-scroll" href="https://facebook.com/tydewest">FACEBOOK</a>
           <a class="button button-style button-style-dark button-style-icon fa fa-twitter smoth-scroll" href="https://twitter.com/tydewest">TWITTER</a>
           <a class="button button-style button-style-dark button-style-icon fa fa-instagram smoth-scroll" href="https://instagram.com/tydewest">INSTAGRAM</a>
-	 <a class="button button-style button-style-dark button-style-icon fa fa-snapchat smoth-scroll" href="https://snapchat.com/add/tydewest">SNAPCHAT</a>
+	  <a class="button button-style button-style-dark button-style-icon fa fa-snapchat smoth-scroll" href="https://snapchat.com/add/tydewest">SNAPCHAT</a>
+	  <a class="button button-style button-style-dark button-style-icon fa fa-github smoth-scroll" href="https://github.com/tydewest">GITHUB</a>
+	 
             </div>
 
       <br>
