--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+<!-- Intercom Start -->
+    <script>
+    window.intercomSettings = {
+      app_id: "z641j0ds"
+    };
+  </script>
+
+  <script>
+  // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/z641j0ds'
+  (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/z641j0ds';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+  </script>
+<!-- Intercom End -->
 
 
     <!-- Meta Tag -->
@@ -34,7 +46,7 @@
     <meta property="og:image" content="images/bg/me.jpg" />
 
     <!-- SEO -->
-    <meta name="description" content="I’m Lachy Schumacher, I'm A UI Designer, Graphic Designer & Developer Based In Sydney Australia.">
+    <meta name="description" content="Hey Lachy Schumacher, I'm a Digital Content Creator, Graphic Designer & Developer Based In Sydney, Australia.">
     <meta name="author" content="Lachy Schumacher">
     <meta name="url" content="tydewest.com">
     <meta name="copyright" content="Lachy Schumacher">
@@ -74,19 +86,6 @@
 	  <div class="loader"></div>
     </div>
 <!-- Preloader End -->
-
-    <!-- Intercom Start -->
-    <script>
-    window.intercomSettings = {
-      app_id: "z641j0ds"
-    };
-  </script>
-
-  <script>
-  // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/z641j0ds'
-  (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/z641j0ds';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
-  </script>
-    <!-- Intercom End -->
 
 
 
@@ -205,11 +204,9 @@
     <center><h3>Get Social.</h3></center>
 
  <div class="text-center margin-top-50">
-          <a class="button button-style button-style-dark button-style-icon fa fa-facebook smoth-scroll" href="https://facebook.com/tydewest">FACEBOOK</a>
-          <a class="button button-style button-style-dark button-style-icon fa fa-twitter smoth-scroll" href="https://twitter.com/tydewest">TWITTER</a>
-          <a class="button button-style button-style-dark button-style-icon fa fa-instagram smoth-scroll" href="https://instagram.com/tydewest">INSTAGRAM</a>
-	  <a class="button button-style button-style-dark button-style-icon fa fa-snapchat smoth-scroll" href="https://snapchat.com/add/tydewest">SNAPCHAT</a>
-	  <a class="button button-style button-style-dark button-style-icon fa fa-github smoth-scroll" href="https://github.com/tydewest">GITHUB</a>
+	  <a class="button button-style button-style-dark button-style-icon fa fa-dribbble smoth-scroll" href="https://dribbble.com/tydewest">Dribbble</a>
+          <a class="button button-style button-style-dark button-style-icon fa fa-behance smoth-scroll" href="https://behance.net/tydewest">Behance</a>
+	  <a class="button button-style button-style-dark button-style-icon fa fa-github smoth-scroll" href="https://github.com/tydewest">Github</a>
 
             </div>
 
