--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                         </li>
                                         <li><a class="smoth-scroll" href="#contact">Contact</a>
                                         </li>
-					<li><a class="smoth-scroll" href="#socail">Socails</a>
+					<li><a class="smoth-scroll" href="#Links">Links</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -145,7 +145,6 @@
                                     <div class="margin-top-60">
                           <a class="button button-style button-style-icon smoth-scroll" href="https://portfolio.tydwest.com">View Portfolio</a>
                                   </div>
-
                                 </div>
                             </div>
                         </div>
@@ -199,14 +198,15 @@
 
 <!-- Contact End -->
 <!-- Contact Start -->
-    <section id="Social">
+    <section id="Links">
 
-    <center><h3>Get Social.</h3></center>
+    <center><h3>Links.</h3></center>
 
  <div class="text-center margin-top-50">
-	  <a class="button button-style button-style-dark button-style-icon fa fa-dribbble smoth-scroll" href="https://dribbble.com/tydewest">Dribbble</a>
-          <a class="button button-style button-style-dark button-style-icon fa fa-behance smoth-scroll" href="https://behance.net/tydewest">Behance</a>
-	  <a class="button button-style button-style-dark button-style-icon fa fa-github smoth-scroll" href="https://github.com/tydewest">Github</a>
+	 <a class="button button-style button-style-dark button-style-icon fa fa-sticky-note smoth-scroll" href="https://portfolio.tydewest.com/">Portfolio</a>
+	 <a class="button button-style button-style-dark button-style-icon fa fa-dribbble smoth-scroll" href="https://dribbble.com/tydewest">Dribbble</a>
+         <a class="button button-style button-style-dark button-style-icon fa fa-behance smoth-scroll" href="https://behance.net/tydewest">Behance</a>
+	 <a class="button button-style button-style-dark button-style-icon fa fa-github smoth-scroll" href="https://github.com/tydewest">Github</a>
 
             </div>
 
